<resources>
    <string name="app_name">Assignment 3</string>
    <string name="score">Score: </string>
    <string name="default_score">0</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="new_game">New</string>
    <string name="start_game">Start</string>
    <string name="end_game">End</string>
    <string name="lives">Lives: </string>
    <string name="default_lives">3</string>
    <string name="obstacle_warning">You must have at least one obstacle!</string>
    <string name="game_over">Game Over!</string>
    <string name="ok">OK</string>
    <string name="paused">Paused</string>
</resources>
